Elements inside the content body can no longer overflow it

--- a/styles/wiki.css
+++ b/styles/wiki.css
@@ -110,6 +110,7 @@
 
 .content-body {
   flex: 1;
+  overflow: hidden;
 
   height: min-content;
   padding: 20px;
